<resources>
    <string name="app_name">Ciphers</string>
    <string name="main_menu">Главное меню</string>

    <string name="cipher">ЗАШИФРОВАТЬ</string>
    <string name="decryption">РАСШИФРОВАТЬ</string>

    <string name="nameListString">Шифры</string>

    <string name="nameCaesar">Шифр Цезаря</string>
    <string name="nameCaesar2">Шифр Цезаря (Расшифровка)</string>
    <string name="Gronsveld">Шифр Гронсфельда</string>


    <string name="buttonDecryption">Расшифровать</string>
    <string name="buttonCipher">Зашифровать</string>

    <string name="keyGenerator">СГЕНЕРИРОВАТЬ КЛЮЧ</string>

</resources>
