<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:layout_marginTop="30dp"
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="42sp"
        android:layout_centerHorizontal="true"
         />

    <Button
        android:id="@+id/cipher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/menu"
        android:text="@string/cipher"
        android:textSize="42sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="buttonChipher"
        />

    <Button
        android:id="@+id/decryption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cipher"
        android:text="@string/decryption"
        android:textSize="42sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        />

</RelativeLayout>