<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nameCeasar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gronsveld"
        android:paddingTop="30dp"
        android:paddingBottom="10dp"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@android:color/black"
        />

    <EditText
        android:id="@+id/editKey"
        android:layout_below="@id/nameCeasar"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Введите числовой ключ"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/buttonKey"
        android:layout_below="@id/editKey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/keyGenerator"
        android:onClick="buttonKey"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="20dp"
        android:background="#0000CD"
        android:textColor="@android:color/white"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_below="@id/buttonKey"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="Введите текст, который нужно заифровать (расшифровать)"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:id="@+id/editTextCeasar"
        android:layout_below="@id/editText"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:hint="Результат шифровки (расшифровки)"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <Button
        android:id="@+id/buttonCipers"
        android:layout_below="@id/editTextCeasar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/cipher"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="buttonCeasar"
        android:layout_alignParentLeft="true"
        android:layout_alignLeft="@id/buttonDecryption"
        android:layout_marginLeft="20dp"
        android:background="#0000CD"
        android:textColor="@android:color/white"
        />

    <Button
        android:id="@+id/buttonDecryption"
        android:layout_alignParentRight="true"
        android:layout_below="@id/editTextCeasar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/decryption"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:onClick="buttonCeasar2"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:background="#0000CD"
        android:textColor="@android:color/white"
        />
</RelativeLayout>